--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,39 @@
-spring.jpa.hibernate.ddl-auto=update
+server.port=9090
+
+####### Data-Source Properties #######
 spring.datasource.url=jdbc:mysql://localhost:3306/codewar?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
 spring.datasource.password=banyaboy
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+###### JPA Properties ######
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
-server.port=9090
+spring.jpa.hibernate.ddl-auto=update
+
+
+####### MULTIPART (MultipartProperties) ########
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=2KB
+# Max file size.
+spring.servlet.multipart.max-file-size=200MB
+# Max Request Size
+spring.servlet.multipart.max-request-size=215MB
+## File Storage Properties
+# All files uploaded through the REST API will be stored in this directory
+file.upload-dir=/Users/callicoder/uploads
+
+
+###### Email Properties ######
+spring.mail.host = smtp.gmail.com
+spring.mail.port = 587
+spring.mail.properties.mail.smtp.starttls.enable = true
+spring.mail.username = mohitagr00001@gmail.com
+spring.mail.password = @LightSpeed3
+spring.mail.properties.mail.smtp.starttls.required = true
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.connectiontimeout = 5000
+spring.mail.properties.mail.smtp.timeout = 5000
+spring.mail.properties.mail.smtp.writetimeout = 5000
