--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,9 +21,9 @@ spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=200MB
 # Max Request Size
 spring.servlet.multipart.max-request-size=215MB
+
 ## File Storage Properties
 # All files uploaded through the REST API will be stored in this directory
-file.upload-dir=/Users/callicoder/uploads
 
 
 ###### Email Properties ######
@@ -31,7 +31,7 @@ spring.mail.host = smtp.gmail.com
 spring.mail.port = 587
 spring.mail.properties.mail.smtp.starttls.enable = true
 spring.mail.username = mohitagr00001@gmail.com
-spring.mail.password = This_is_not_my_password
+spring.mail.password = @LightSpeed3
 spring.mail.properties.mail.smtp.starttls.required = true
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.connectiontimeout = 5000
