--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,18 @@ server.port=9090
 ####### Data-Source Properties #######
 spring.datasource.url=jdbc:mysql://localhost:3306/codewar?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
-spring.datasource.password=banyaboy
+spring.datasource.password=XXXXXXXXX
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 ###### JPA Properties ######
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+########## MONGODB ###############
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=lobby
 
 
 ####### MULTIPART (MultipartProperties) ########
@@ -30,8 +35,8 @@ spring.servlet.multipart.max-request-size=215MB
 spring.mail.host = smtp.gmail.com
 spring.mail.port = 587
 spring.mail.properties.mail.smtp.starttls.enable = true
-spring.mail.username = mohitagr00001@gmail.com
-spring.mail.password = @LightSpeed3
+spring.mail.username = code.battle0@gmail.com
+spring.mail.password = XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 spring.mail.properties.mail.smtp.starttls.required = true
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.connectiontimeout = 5000
