--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=9090
 ####### Data-Source Properties #######
 spring.datasource.url=jdbc:mysql://localhost:3306/codewar?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
-spring.datasource.password=XXXXXXXXX
+spring.datasource.password=banyaboy
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 ###### JPA Properties ######
@@ -36,7 +36,7 @@ spring.mail.host = smtp.gmail.com
 spring.mail.port = 587
 spring.mail.properties.mail.smtp.starttls.enable = true
 spring.mail.username = code.battle0@gmail.com
-spring.mail.password = XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+spring.mail.password = @TwoOfThree23
 spring.mail.properties.mail.smtp.starttls.required = true
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.connectiontimeout = 5000
@@ -48,3 +48,4 @@ spring.mail.properties.mail.smtp.writetimeout = 5000
 app.jwtSecret= JWTSuperSecretKey
 app.jwtExpirationInMs = 604800000
 #app.jwtExpirationInMs = 30000
+
