--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=9090
 ####### Data-Source Properties #######
 spring.datasource.url=jdbc:mysql://localhost:3306/codewar?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
-spring.datasource.password=banyaboy
+spring.datasource.password=###########
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 ###### JPA Properties ######
