--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,25 @@
             <version>2.8.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-s3</artifactId>
+            <version>1.11.327</version>
+        </dependency>
+
+        <dependency>
+        <groupId>it.zielke</groupId>
+        <artifactId>moji</artifactId>
+        <version>1.0.2</version>
+    </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+
 
         <!--		<dependency>-->
         <!--			<groupId>org.springframework.boot</groupId>-->
