--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,15 +21,15 @@ spring.data.mongodb.database=lobby
 # Enable multipart uploads
 spring.servlet.multipart.enabled=true
 # Threshold after which files are written to disk.
-spring.servlet.multipart.file-size-threshold=2KB
+#spring.servlet.multipart.file-size-threshold=2KB
 # Max file size.
 spring.servlet.multipart.max-file-size=200MB
 # Max Request Size
 spring.servlet.multipart.max-request-size=215MB
 
+
 ## File Storage Properties
 # All files uploaded through the REST API will be stored in this directory
-
 
 ###### Email Properties ######
 spring.mail.host = smtp.gmail.com
@@ -43,9 +43,17 @@ spring.mail.properties.mail.smtp.connectiontimeout = 5000
 spring.mail.properties.mail.smtp.timeout = 5000
 spring.mail.properties.mail.smtp.writetimeout = 5000
 
+server.tomcat.connection-timeout=18000000
 
 ## App Properties
 app.jwtSecret= JWTSuperSecretKey
 app.jwtExpirationInMs = 604800000
 #app.jwtExpirationInMs = 30000
+
+#AWS
+d4d5.aws.access_key_id=AKIA5H5HN4YG2H4VGXW5
+d4d5.aws.secret_access_key=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
+d4d5.aws.s3.bucket=problemsd4d5
+d4d5.aws.s3.region=ap-south-1
+
 
