--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=9090
 ####### Data-Source Properties #######
 spring.datasource.url=jdbc:mysql://localhost:3306/codewar?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
-spring.datasource.password=banyaboy
+spring.datasource.password=##############
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 ###### JPA Properties ######
@@ -36,7 +36,7 @@ spring.mail.host = smtp.gmail.com
 spring.mail.port = 587
 spring.mail.properties.mail.smtp.starttls.enable = true
 spring.mail.username = code.battle0@gmail.com
-spring.mail.password = @TwoOfThree23
+spring.mail.password = ###############
 spring.mail.properties.mail.smtp.starttls.required = true
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.connectiontimeout = 5000
@@ -51,8 +51,8 @@ app.jwtExpirationInMs = 604800000
 #app.jwtExpirationInMs = 30000
 
 #AWS
-d4d5.aws.access_key_id=AKIA5H5HN4YG2H4VGXW5
-d4d5.aws.secret_access_key=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
+d4d5.aws.access_key_id=##################
+d4d5.aws.secret_access_key=#######################
 d4d5.aws.s3.bucket=problemsd4d5
 d4d5.aws.s3.region=ap-south-1
 
